# fedex-table-extractor

./: .env.example  .gitignore  ARCHITECTURE.md  fedex_rates.db  pyproject.toml
src/: config.py  db_writer.py  llm_extractor.py  main.py  models.py  page_formatter.py  pdf_reader.py  pipeline.py  table_parser.py
tests/: test_db_writer.py  test_llm_extractor.py  test_models.py  test_pdf_reader.py
